# PSIT-Exam-Cell-Backend

./: .gitignore  README.md  manage.py  pyproject.toml
PSITExamCellBackend/: JWTMiddleware.py  asgi.py  constants.py  settings.py  urls.py  utils.py  wsgi.py
adminsession/: models.py  serializers.py  urls.py  views.py
adminsession/migrations/: 0001_initial.py  0002_sessionmodel_report_link.py  0003_alter_sessionmodel_session_name.py  0004_alter_sessionmodel_session_name.py
auth_app/: models.py  serializer.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py
collageInfo/: apps.py  models.py  serializer.py  urls.py  views.py
collageInfo/migrations/: 0001_initial.py  0002_alter_branchmodel_branch_name_alter_branchmodel_user_and_more.py  0003_alter_roommodel_room_breakout.py  0004_sectionmodel_user.py  0005_roommodel_user.py  0006_roommodel_created_on.py  0007_roommodel_room_remark_roommodel_room_type.py
pdf_utils/: CRUD_to_cloud.py  converthtmltopdf.py
seatingplan/: apps.py  models.py  serializers.py  urls.py  views.py
seatingplan/migrations/: 0001_initial.py  0002_roomseatingmodel_seating_map.py  0003_alter_roomseatingmodel_seating_map.py  0004_remove_seatingplanmodel_report_link.py  0005_seatingplanmodel_branch_seatingplanmodel_section.py  0006_roomseatingmodel_room_remark_and_more.py  0007_alter_roomseatingmodel_session.py  0008_remove_seatingplanmodel_room_number_and_more.py  0009_alter_roomseatingmodel_room_remark.py  0010_alter_roomseatingmodel_room_breakout_and_more.py  (+1 more)
student/: models.py  serializer.py  urls.py  views.py
(+2 files in other folders)
